# ToDoList

./: CMakeLists.txt  SavedToDo.txt  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskListManager.cpp  TaskListManager.h  ToDoListInterface.cpp  ToDoListInterface.h  main.cpp
test/: CMakeLists.txt  TaskListManagerTests.cpp  TaskListTests.cpp  TaskTests.cpp  testToDo.txt
